--- a/6prak/main.html
+++ b/6prak/main.html
@@ -18,9 +18,9 @@
         </div>
         <div class="header-nav">
             <a href="#">Главная</a>
-            <a href="#">Первый семестр</a>
+            <a href="./first-semester.html">Первый семестр</a>
             <a href="#">Второй семестр</a>
-            <a href="#">Услуги</a>
+            <a href="./products.html">Услуги</a>
             <a href="#">Авторизация</a>
         </div>
     </header>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="video">
                     <video width="320" height="240">
-                        <source src="adas.mp4" type="video/mp4">
+                        <source src="../video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                     </div>
@@ -56,10 +56,19 @@
         </div>
         <div class="video backend-video">
         <video width="320" height="240">
-            <source src="adas.mp4" type="video/mp4">
+            <source src="../video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         </div>
+        <div class="grid-container">
+            <div class="grid-item">Элемент 1</div>
+            <div class="grid-item">Элемент 2</div>
+            <div class="grid-item">Элемент 3</div>
+            <div class="grid-item">Элемент 4</div>
+            <div class="grid-item">Элемент 5</div>
+            <div class="grid-item">Элемент 6</div>
+        </div>
+        
         </div>
     </div>
     <footer>
