--- a/6prak/products.html
+++ b/6prak/products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My website</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="5prak.css">
 </head>
 
 <body>
@@ -24,14 +24,63 @@
             <a href="#">Авторизация</a>
         </div>
     </header>
+    <form class="main">
+        <div class="main-form">
+            <div class="form-head">
+                <div class="form-header">
+                    <h3>Разработка веб-приложения</h3>
+                    <button class="form-close-btn">X</button>
+                </div>
+                <p>Заполните форму и мы обязательно свяжемся с  вами в ближайшее время для уточнения деталей</p> 
+            </div>
+            <div class="form-body">
+                <table>
+                    <tr>
+                        <td><label for="name">Как вас зовут</label></td>
+                        <td><input id="name" name="name" type="text" placeholder="например Иванов Иван Иванович" size=30 class="input-info"></td>
+                    </tr>
+                    <tr>
+                        <td><label for="email">Ваш e-mail</label></td>
+                        <td><input id="email" name="email" type="email" placeholder="test@mail.ru" class="input-info" size=30 ></td>
+                    </tr>
+                    <tr>
+                        <td><label for="number">Телефон</label></td>
+                    </tr>
+                    <tr>
+                        <td><label for="country">Страна</label></td>
+                        <td><select id="country" name="country" class="input-info">
+                            <option value="ru">Россия</option>
+                            <option value="ge">Германия</option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td><label for="date">Дата</label></td>
+                        <td><input type="date" id="date" name="date" class="input-info"></td>
+                    </tr>
+                    <tr>
+                        <td class="comment"><label for="comment">Комментарий</label>
+                        <td><textarea id="comment" name="comment" cols="30" rows="7" class="input-info"></textarea></td>
+                    </tr>                    
+                </table>             
+            </div>
+        <input type="checkbox" style="width: 14px;">Согласие на обработку личных данных
+        <div class="send-button">
+        <button onclick="confirm_order()">Отправить заявку</button>
+        </div>    
+    </div>
+    </form>
     <div class="main-content">
+        <aside>
         <nav>
             <a href="#">Навигация по странице</a>
             <a href="#">Фронтенд</a>
             <a href="#">Бэкенд</a>
         </nav>
+        </aside>
+        <section>
         <div class="information-block">
-            <div class="grid-container">
+            <h2>Разработка веб-приложений</h2>
+            <div class="card-holder">
                 <div class="item-card">
                     <img src="../1073.jpg" alt="photo-card">
                     <p>Сайт-визитка</p>
@@ -45,11 +94,20 @@
                 <div class="item-card">
                     <img src="../1073.jpg" alt="photo-card">
                     <p>Интернет-магазин</p>
-                    <button class="order-btn shop-card" oncanplay="open_form('Интернет-магазин')">Заказать</button>
+                    <button class="order-btn" onclick="open_form('Интернет-магазин')">Заказать</button>
                 </div>
             </div>
+            <div class="sub-info">
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+                <p>
+                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+                </p>
+            </div>
         </div>
-    </div>  
+        </section>
+    </div>
     <footer>
         <p>&copy; Шипилов Максим Михайлович, 2024</p>
         <div class="social">
@@ -57,5 +115,6 @@
             <a href="https://vk.com"><img src="../icons8-vk-com.svg" alt="vk" style="width: 24px"></a>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
